rtpg (0.2.10) unstable; urgency=low

  * Fix params cast

 -- Roman V. Nikolaev <rshadow@rambler.ru>  Mon, 09 Aug 2010 10:42:00 +0400

rtpg (0.2.9-1) unstable; urgency=low

  * Fix get some config params

 -- Roman V. Nikolaev <rshadow@rambler.ru>  Wed, 14 Jul 2010 11:31:28 +0400

rtpg (0.2.8-1) unstable; urgency=low

  * Since now we use CGI::Simple instead CGI (there was a bug in
    upload function in CGI module).
  * Using locks more properly.
  * Added ukrainian trnslation.

 -- Dmitry E. Oboukhov <unera@debian.org>  Wed, 14 Jul 2010 11:14:37 +0400

rtpg (0.2.7-1) unstable; urgency=low

  * You can use only these frames You want.

 -- Dmitry E. Oboukhov <unera@debian.org>  Wed, 07 Jul 2010 16:24:43 +0400

rtpg (0.2.6-1) unstable; urgency=low

  * Fixed sorting of refresh-time.

 -- Dmitry E. Oboukhov <unera@debian.org>  Wed, 09 Jun 2010 17:37:37 +0400

rtpg (0.2.5-1) unstable; urgency=low

  * Fixed licenses and debian packaging, updated debian/copyright.
  * Added Roman V. Nikolaev to uploaders list.
  * First unstable upload for new rtpg.

 -- Dmitry E. Oboukhov <unera@debian.org>  Tue, 08 Jun 2010 16:21:58 +0400

rtpg (0.2.4-1) experimental; urgency=low

  * detecting if upload file is torrent processes more properly.
  * min jquery version is 1.4.2.

 -- Dmitry E. Oboukhov <unera@debian.org>  Mon, 07 Jun 2010 12:33:22 +0400

rtpg (0.2.3-1) experimental; urgency=low

  * A few speed optimizations and bugfixes.

 -- Dmitry E. Oboukhov <unera@debian.org>  Mon, 31 May 2010 15:38:24 +0400

rtpg (0.2.2-1) experimental; urgency=low

  * Fixed uploading torrents in Debian/stable (it has old CGI).

 -- Dmitry E. Oboukhov <unera@debian.org>  Sun, 30 May 2010 10:50:23 +0400

rtpg (0.2.1-1) experimental; urgency=low

  * index.cgi to ensure compatibility with old rtpg(0.1) config.
  * switched to 3.0 debian/source format.

 -- Dmitry E. Oboukhov <unera@debian.org>  Fri, 28 May 2010 16:47:08 +0400

rtpg (0.2.0-1) experimental; urgency=low

  * New upstream version: