@@ -86,6 +86,32 @@ table.list tbody td.img {
     margin: 0px;
 }
 
+table.list tbody td.custom {
+    max-width: 24px;
+    width: 24px;
+    min-width: 24px;
+    padding: 0px;
+    margin: 0px;
+    background-position: center;
+    background-repeat: no-repeat;
+}
+
+table.list tbody td.custom.c1 {
+    background-image: url("status/c1.png");
+}
+table.list tbody td.custom.c2 {
+    background-image: url("status/c2.png");
+}
+table.list tbody td.custom.c3 {
+    background-image: url("status/c3.png");
+}
+table.list tbody td.custom.c4 {
+    background-image: url("status/c4.png");
+}
+table.list tbody td.custom.c5 {
+    background-image: url("status/c5.png");
+}
+
 table.list tbody td.message {
     max-width: 24px;
     width: 24px;
@@ -127,11 +153,13 @@ table.list tbody td span.data
 
 /*********************************************************** List alternation */
 table.list tbody tr.odd td.name,
+table.list tbody tr.even td.custom,
 table.list tbody tr.odd td.message {
 
 }
 
 table.list tbody tr.even td.name,
+table.list tbody tr.even td.custom,
 table.list tbody tr.even td.message {
     background-color: #f0f0f0;
 }
