@@ -199,7 +199,7 @@ This method returns list of torrents. It is a link to array of hashes.
 
 =cut
 
-our $exclude_d_mask = qr{^d\.(get_mode|get_custom.*|get_bitfield)$};
+our $exclude_d_mask = qr{^d\.(?:get_mode|get_custom_.*|get_bitfield)$};
 
 sub torrents_list
 {
@@ -209,7 +209,7 @@ sub torrents_list
 
     my @iary=eval {
         grep !/$exclude_d_mask/,
-        grep /^d\.(get_|is_|views\.has$)/, $self->_get_list_methods;
+        grep /^d\.(?:get_|is_|views\.has$)/, $self->_get_list_methods;
     };
 
     if ($@)
@@ -266,6 +266,16 @@ sub torrents_list
 
         $_ = _normalize_one_torrent_info(\%info);
     }
+
+    # Set custom params count
+    my $count = 0;
+    for my $name ( keys %{$list->[0]} )
+    {
+        next unless $name =~ '^custom(\d+)$';
+        $count = $1 if $1 > $count;
+    }
+    $_->{custom_count} = $count for @$list;
+
     return $list unless wantarray;
     return $list, '';
 }
