@@ -1,8 +1,9 @@
 rtpg (0.2.10) unstable; urgency=low
 
   * Fix params cast
+  * Show custom
 
- -- Roman V. Nikolaev <rshadow@rambler.ru>  Mon, 09 Aug 2010 10:42:00 +0400
+ -- Roman V. Nikolaev <rshadow@rambler.ru>  Mon, 09 Aug 2010 12:39:26 +0400
 
 rtpg (0.2.9-1) unstable; urgency=low
 
